--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -83,5 +83,5 @@ color:#fff
 body {
 font-family: "Cabin", Arial, sans-serif;
 color: #fff;
-background-color: #450808;
+background-color: #ffdac1;
 }
