--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,7 +11,7 @@ border-color: #911821;
 }
 .navbar-light .navbar-brand {
 font-family: 'Lobster', cursive;
-color: #fff;
+color: #000;
 }
 .navbar-light .navbar-toggler {
 color: white;
